Bug 979471 - Populate ICE stats for DataChannels when we have a null selector. r=jib