netwerk/sctp/datachannel/DataChannel.h
@@ -192,6 +192,8 @@ public:
 
   void ReadBlob(already_AddRefed<DataChannelConnection> aThis, uint16_t aStream, nsIInputStream* aBlob);
 
+  void GetStreamIds(std::vector<uint16_t>* aStreamList);
+
 protected:
   friend class DataChannelOnMessageAvailable;
   // Avoid cycles with PeerConnectionImpl
